--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <title>KairoSoft :: Crecé tu emprendimiento con tecnología</title>
+    <meta name="description" content="Impulsá tu negocio con KairoSoft. Soluciones tecnológicas y software a medida para emprendedores y empresas que buscan crecer mediante automatización y sistemas eficientes." />
+    <meta name="keywords" content="KairoSoft, sistemas de gestión, HandyStock, CRM, software a medida, automatización, soluciones tecnológicas, crecimiento empresarial, emprendimientos, Argentina" />
+    <meta name="author" content="KairoSoft - Abraham Bartoloni y Ezequiel Arevalo" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph (Facebook, LinkedIn) -->
+    <meta property="og:title" content="KairoSoft :: Crecé tu emprendimiento con tecnología" />
+    <meta property="og:description" content="Software a medida y soluciones SaaS que ayudan a emprendedores y empresas a crecer mediante automatización y tecnología." />
+    <meta property="og:image" content="/images/og-image.png" /> <!-- Reemplazá por la ruta de la imagen real -->
+    <meta property="og:url" content="https://www.kairosoft.com.ar" /> <!-- Reemplazá por tu URL -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="es_AR" />
+    <link rel="icon" type="image/svg+xml" href="/public/kairoSoft-LOGO.svg">
   </head>
   <body>
     <div id="root"></div>
